# demo-financial-model

backend/: .gitignore  README.md  main.py  pyproject.toml  pytest.ini
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  activity_log.py  admin.py  catalog.py  health.py  library.py  models.py  premises.py  scenarios.py
backend/app/repositories/: base.py  csv_repository.py
backend/app/schemas/: api.py  domain.py
backend/app/services/: activity_log.py  admin.py  board.py  dependencies.py  ids.py  import_grid.py  models.py  outputs.py  period_parser.py  predictions.py  premise_values.py  timeline.py
backend/app/utils/: labels.py
backend/data/: activity_log.csv  dependency_edges.csv  library_premises.csv  model_outputs.csv  model_periods.csv  model_premises.csv  models.csv  periods.csv  premise_values.csv  premises.csv  scenario_overrides.csv  scenario_prediction_overrides.csv  scenarios.csv  values.csv
backend/tests/: helpers.py  test_admin_reset_data.py  test_admin_reset_default.py  test_board.py  test_board_projection_scope.py  test_cycle_detection.py  test_delete_premise.py  test_dependencies.py  test_dependency_tree.py  test_forecast.py  test_formula_and_variable_names.py  test_import_grid.py  test_outputs.py  test_period_parser.py  test_prediction_window_validation.py  test_premise_name_uniqueness.py  test_seed_demo.py  test_year_summary_methods.py
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/hooks/: useBoardDraft.ts
(+59 files in other folders)
